style(shadow): Enable shadow style, fix z-index for openlayers map

--- a/scss/os/_overrides_bootstrap.scss
+++ b/scss/os/_overrides_bootstrap.scss
@@ -1,3 +1,4 @@
 // Variables we always want set no matter the theme
 $breadcrumb-bg: transparent;
 $breadcrumb-padding-y: .25rem;
+$enable-shadows: true;
