--- a/scss/os/_overrides_openlayers.scss
+++ b/scss/os/_overrides_openlayers.scss
@@ -46,7 +46,7 @@
   left: .75rem;
   right: auto;
   top: .75rem;
-  z-index: $zindex-dropdown;
+  z-index: 1;
 }
 
 
